--- a/StepCounter/MainTableView/CollectionCell/OneDateStepDetailCell.xib
+++ b/StepCounter/MainTableView/CollectionCell/OneDateStepDetailCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OneDateStepDetailCell" id="gTV-IL-0wX" customClass="OneDateStepDetailCell" customModule="StepCounter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="546" height="520"/>
+            <rect key="frame" x="0.0" y="0.0" width="551" height="489"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="546" height="520"/>
+                <rect key="frame" x="0.0" y="0.0" width="551" height="489"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dbq-eU-5eO">
-                        <rect key="frame" x="110.5" y="60" width="325" height="290"/>
+                        <rect key="frame" x="113" y="60" width="325" height="268"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RunningGrey_ico" translatesAutoresizingMaskIntoConstraints="NO" id="hdo-w2-i88">
                                 <rect key="frame" x="142.5" y="16" width="40" height="40"/>
@@ -41,13 +41,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10k Goals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zdr-sQ-tL6">
-                                <rect key="frame" x="96.5" y="176" width="132" height="58"/>
+                                <rect key="frame" x="96.5" y="176" width="132" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star_Yellow" translatesAutoresizingMaskIntoConstraints="NO" id="Ank-H4-p81">
-                                <rect key="frame" x="142.5" y="242" width="40" height="40"/>
+                                <rect key="frame" x="142.5" y="220" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="1Ye-MI-eIC"/>
                                     <constraint firstAttribute="width" constant="40" id="j91-5v-Lqq"/>
@@ -72,7 +72,7 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pCs-l3-gEq">
-                        <rect key="frame" x="16" y="382" width="514" height="100"/>
+                        <rect key="frame" x="16" y="360" width="519" height="100"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKo-yQ-wM3">
                                 <rect key="frame" x="8" y="8" width="56" height="56"/>
@@ -93,7 +93,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VF4-PQ-Lcn">
-                                <rect key="frame" x="450" y="8" width="56" height="56"/>
+                                <rect key="frame" x="455" y="8" width="56" height="56"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" translatesAutoresizingMaskIntoConstraints="NO" id="1BW-cz-5Ha">
                                         <rect key="frame" x="8" y="8" width="40" height="40"/>
@@ -111,7 +111,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CyD-2A-RJW">
-                                <rect key="frame" x="229" y="8" width="56" height="56"/>
+                                <rect key="frame" x="231.5" y="8" width="56" height="56"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="maps" translatesAutoresizingMaskIntoConstraints="NO" id="F4g-YT-lim">
                                         <rect key="frame" x="8" y="8" width="40" height="40"/>
@@ -129,19 +129,19 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="128 kcal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nZW-T5-ked">
-                                <rect key="frame" x="-58.5" y="70" width="189" height="30"/>
+                                <rect key="frame" x="-60" y="70" width="192" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2:31 h" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wlX-12-42Q">
-                                <rect key="frame" x="383.5" y="69" width="189" height="30"/>
+                                <rect key="frame" x="387.5" y="70" width="191.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.5 mil" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLn-gE-XII">
-                                <rect key="frame" x="162.5" y="72" width="189" height="30"/>
+                                <rect key="frame" x="164" y="70" width="191.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -149,14 +149,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="nZW-T5-ked" secondAttribute="bottom" id="3Rh-px-gt9"/>
+                            <constraint firstAttribute="bottom" secondItem="nZW-T5-ked" secondAttribute="bottom" id="3dq-ei-knS"/>
                             <constraint firstItem="CyD-2A-RJW" firstAttribute="width" secondItem="VF4-PQ-Lcn" secondAttribute="width" id="4yW-cO-bxa"/>
                             <constraint firstItem="WLn-gE-XII" firstAttribute="leading" secondItem="nZW-T5-ked" secondAttribute="trailing" priority="999" constant="32" id="78V-YI-cWg"/>
-                            <constraint firstItem="wlX-12-42Q" firstAttribute="top" secondItem="VF4-PQ-Lcn" secondAttribute="bottom" constant="5" id="9bG-C2-QhM"/>
+                            <constraint firstItem="wlX-12-42Q" firstAttribute="top" secondItem="VF4-PQ-Lcn" secondAttribute="bottom" constant="6" id="9bG-C2-QhM"/>
                             <constraint firstAttribute="trailing" secondItem="VF4-PQ-Lcn" secondAttribute="trailing" constant="8" id="GTb-x5-Q2h"/>
                             <constraint firstItem="wlX-12-42Q" firstAttribute="width" secondItem="WLn-gE-XII" secondAttribute="width" id="GWq-Tr-wAU"/>
                             <constraint firstItem="CyD-2A-RJW" firstAttribute="top" secondItem="pCs-l3-gEq" secondAttribute="top" constant="8" id="JbZ-5N-10B"/>
-                            <constraint firstAttribute="bottom" secondItem="wlX-12-42Q" secondAttribute="bottom" constant="1" id="NVQ-sk-3XG"/>
                             <constraint firstItem="wlX-12-42Q" firstAttribute="leading" secondItem="WLn-gE-XII" secondAttribute="trailing" priority="999" constant="32" id="PDH-9D-BR9"/>
                             <constraint firstItem="nZW-T5-ked" firstAttribute="width" secondItem="WLn-gE-XII" secondAttribute="width" id="S0b-i7-Ly1"/>
                             <constraint firstItem="RKo-yQ-wM3" firstAttribute="leading" secondItem="pCs-l3-gEq" secondAttribute="leading" constant="8" id="Sfx-VL-Ee7"/>
@@ -166,10 +165,9 @@
                             <constraint firstItem="RKo-yQ-wM3" firstAttribute="width" secondItem="CyD-2A-RJW" secondAttribute="width" id="bRm-HT-3jj"/>
                             <constraint firstItem="WLn-gE-XII" firstAttribute="centerX" secondItem="CyD-2A-RJW" secondAttribute="centerX" id="bVh-ud-1Hp"/>
                             <constraint firstItem="CyD-2A-RJW" firstAttribute="leading" secondItem="RKo-yQ-wM3" secondAttribute="trailing" priority="999" constant="96" id="ckx-Qj-Hs7"/>
-                            <constraint firstAttribute="bottom" secondItem="WLn-gE-XII" secondAttribute="bottom" constant="-2" id="mD8-m9-p6b"/>
                             <constraint firstItem="nZW-T5-ked" firstAttribute="centerX" secondItem="RKo-yQ-wM3" secondAttribute="centerX" id="nam-7n-nXs"/>
                             <constraint firstItem="nZW-T5-ked" firstAttribute="top" secondItem="RKo-yQ-wM3" secondAttribute="bottom" constant="6" id="rA3-MF-eG1"/>
-                            <constraint firstItem="WLn-gE-XII" firstAttribute="top" secondItem="CyD-2A-RJW" secondAttribute="bottom" constant="8" symbolic="YES" id="wzz-t5-uZa"/>
+                            <constraint firstItem="WLn-gE-XII" firstAttribute="top" secondItem="CyD-2A-RJW" secondAttribute="bottom" constant="6" id="wzz-t5-uZa"/>
                             <constraint firstItem="VF4-PQ-Lcn" firstAttribute="top" secondItem="pCs-l3-gEq" secondAttribute="top" constant="8" id="y7V-rc-FV4"/>
                         </constraints>
                     </view>
@@ -182,11 +180,11 @@
                 <constraint firstItem="pCs-l3-gEq" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="16" id="3N5-H2-dDZ"/>
                 <constraint firstItem="Dbq-eU-5eO" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="B08-Y0-DSA"/>
                 <constraint firstItem="pCs-l3-gEq" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="OdE-3h-NFf"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="pCs-l3-gEq" secondAttribute="bottom" constant="4" id="cNX-DO-esB"/>
                 <constraint firstItem="ZTg-uK-7eu" firstAttribute="top" secondItem="Dbq-eU-5eO" secondAttribute="top" constant="-16" id="dFp-fn-UO1"/>
                 <constraint firstItem="pCs-l3-gEq" firstAttribute="top" secondItem="Dbq-eU-5eO" secondAttribute="bottom" constant="32" id="rgb-Zw-GEw"/>
+                <constraint firstItem="pCs-l3-gEq" firstAttribute="bottom" secondItem="ZTg-uK-7eu" secondAttribute="bottom" constant="5" id="wQA-vo-t7R"/>
             </constraints>
-            <size key="customSize" width="546" height="520"/>
+            <size key="customSize" width="551" height="489"/>
             <connections>
                 <outlet property="bottonInfomationEdgeView" destination="pCs-l3-gEq" id="08N-Ze-aR0"/>
                 <outlet property="caloBurned" destination="nZW-T5-ked" id="LG6-D7-Ya8"/>
@@ -205,7 +203,7 @@
                 <outlet property="timeImage" destination="1BW-cz-5Ha" id="3y1-0b-Xsa"/>
                 <outlet property="timeline" destination="S9j-i3-NYg" id="JOt-R5-HVo"/>
             </connections>
-            <point key="canvasLocation" x="172.46376811594203" y="148.66071428571428"/>
+            <point key="canvasLocation" x="176.08695652173915" y="136.27232142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
